--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
   <body>
     <div class="countdown-timer-box">
       <h1>Welcome to the Countdown Timer</h1>
+      <div class="clock-input">
+        <input type="date" name="time-to" class="time-to" id="time-to" value="" onChange="calcTime(this.value)">
+      </div>
+      <div class="container">
+        <div class="clock-column">
+          <p class="clock-days clock-timer"></p>
+          <p class="clock-label">Days</p>
+        </div>
+
+        <div class="clock-column">
+          <p class="clock-hours clock-timer"></p>
+          <p class="clock-label">Hours</p>
+        </div>
+
+        <div class="clock-column">
+          <p class="clock-minutes clock-timer"></p>
+          <p class="clock-label">Minutes</p>
+        </div>
+
+        <div class="clock-column">
+          <p class="clock-seconds clock-timer"></p>
+          <p class="clock-label">Seconds</p>
+        </div>
+      </div>
     </div>
   </body>
+
+  <script src="main.js"></script>
 </html>
